@@ -19,15 +19,14 @@ if [ "$#" -lt 1 ] || [ "$#" -gt 2 ];  then
   echo "Usage: $0 <instance-id> <optional-number-of-records>"
   exit 1
 fi
+INSTANCE_ID="$1"
+NUM_OF_RECORDS="$2"
 
 THIS_DIR=$(cd "$(dirname "$0")" && pwd)
+OUTPUT_DIR="$THIS_DIR/output/"
 SCRIPTS_DIR=$(cd "$THIS_DIR" && cd ../.. && pwd)
 VERSION=$(cat "${SCRIPTS_DIR}/templates/version.txt")
 
-java --add-opens=java.base/java.nio=ALL-UNNAMED \
-  --add-opens=java.base/sun.nio.ch=ALL-UNNAMED \
-  --add-opens=java.base/java.util=ALL-UNNAMED \
-  --add-opens=java.base/java.lang.invoke=ALL-UNNAMED \
-  -cp "${SCRIPTS_DIR}/jars/system-test-${VERSION}-utility.jar" \
-  sleeper.systemtest.datageneration.IngestRandomDataToDocker "$@" \
-  
+mkdir -p "$OUTPUT_DIR"
+java -cp "${SCRIPTS_DIR}/jars/system-test-${VERSION}-utility.jar" \
+  sleeper.systemtest.datageneration.GenerateRandomDataFiles "$INSTANCE_ID" "$OUTPUT_DIR" "$NUM_OF_RECORDS"
